k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec: 
  replicas: 1
  selector:
    matchLabels:
      component: frontend
  template:
    metadata: 
      labels:
        component: frontend
    spec: 
      containers: 
        - name: frontend
          image: ssy01013/guess-frontend
          ports:
            - containerPort: 3000
          # resources:
          #   requests:
          #     memory: "64Mi"
          #     cpu: "250m"
          #   limits:
          #     memory: "128Mi"
          #     cpu: "500m"
